09-Session-Mgt/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-dply
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-session-demo
  template:
    metadata:
      labels:
        app: spring-session-demo
    spec:
      containers:
      - name: spring-session-demo
        image: your-docker-repo/session:latest
        ports:
        - containerPort: 8080
