09-Session-Mgt/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-session-demo
spec:
  selector:
    app: spring-session-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
