09-Session-Mgt/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: session-ingress
  annotations:
    nginx.ingress.kubernetes.io/load-balance: "random"
spec:
  rules:
  - host: your-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-session-demo
            port:
              number: 80
